packages/ui-library/src/css/inputs.scss
/* ... */
.form-error {
    $icon-size: 16px;
    $icon-margin: 5px;
    $icon-spacing: $icon-size + $icon-margin;

    @mixin errorDisplayCss {
        ~ .form-error-message {
            display: block;
        }
    }

    @include keyframes('fade-down-in') {
        0% {
            opacity: 0;
            margin-top: -4px;
        }
        100% {
            opacity: 1;
            margin-top: 0;
        }
    }

    &.input-text {
        input[type=text],
        input[type=password] {
            border-color: $color-input-error;

            &:focus {
                @include errorDisplayCss;
            }
        }
        .input-container {
            padding-right: $icon-spacing;
        }
        .integer-controls {
            right: 33px;
        }
        a.password-show-button {
            right: 35px;
        }
    }
    &.input-textarea {
        textarea {
            border-color: $color-input-error;

            &:focus {
                @include errorDisplayCss;
            }
        }
        .input-container {
            padding-right: $icon-spacing;
        }
        .form-error-icon {
            top: $icon-margin;
        }
    }
    &.input-select {
        .wrapper {
            border-color: $color-input-error;

            &:hover {
                @include errorDisplayCss;
            }
        }
        select {
            &:focus {
                @include errorDisplayCss;
            }
        }
    }
    &.input-select:not(.input-custom-select) {
        .form-error-icon {
            right: -21px;
        }
        .input-container {
            width: calc(100% - 21px);
        }
    }
    &.input-toggle {
        .toggle {
            border-color: $color-input-error;

            &:after {
                border-color: $color-input-error;
            }
        }
    }
    &.input-checkbox {
        .icon {
            &:before {
                border-color: $color-input-error;
            }
        }
        .form-error-icon {
            top: auto;
            left: 31px;
            right: auto;
            margin: 3px 0 0;
        }
        &.inline {
            .label-text {
                padding-right: 20px;
            }
            .form-error-icon {
                top: 5px;
                left: 100%;
                margin: 0;
            }
        }
    }
    &.input-radio {
        .circle {
            border-color: $color-input-error;
        }
    }
    &.intl-tel-input {
        input[type=text] {
            border-color: $color-input-error;

            &:focus {
                @include errorDisplayCss;
            }
        }
    }
    &.input-file-upload {
        .form-error-icon {
            top: auto;
            bottom: 21px;
            right: -16px;
        }
        .form-error-message {
            top: calc(100% + 5px);

            @include border-radius($default-input-border-radius);
        }

        &.image-upload {
            .form-error-icon {
                right: -35px;
            }
            .form-error-message {
                top: 100%;

                @include border-radius(0 0 $default-input-border-radius $default-input-border-radius);
            }
        }
        input {
            &:focus {
                @include errorDisplayCss;
            }
        }
    }
    &.input-integer {
        .integer-controls {
            right: 34px;
        }
        a.undo {
            right: 61px;
        }
        &:focus {
            @include errorDisplayCss;
        }
    }
    &.input-timezone {
        padding-right: 26px;

        .form-error-icon {
            top: 0;
            right: 0;
        }
        .form-error-message {
            top: calc(100% - 20px);

            @include border-radius($default-input-border-radius);
        }
    }

    .form-error-icon {
        position: absolute;
        top: round(($default-input-height - $icon-size) / 2);
        right: 0;
        height: $icon-size;
        width: $icon-size;
        cursor: pointer;

        &:before {
            position: absolute;
            right: 0;
            content: '!';
            font-family: $icon-font;
            color: $color-critical-red;
            height: $icon-size;
            width: $icon-size;
            font-size: $icon-size;
            line-height: 1em;
        }
        &:hover {
            @include errorDisplayCss;
        }
    }

    .form-error-message {
        position: absolute;
        top: calc(100% - 1px);
        left: 0;
        right: 21px;
        display: none;
        z-index: 1;
        padding: 15px;
        box-sizing: border-box;
        min-width: 169px;
        background-color: $color-critical-red;
        color: $color-white;
        text-transform: none;
        -webkit-backface-visibility: hidden; // keeps animation from flickering in Chrome

        @include border-radius(0 0 $default-input-border-radius $default-input-border-radius);
        @include animation(fade-down-in 0.2s);
    }

    &.required {
        .input-container,
        .wrapper,
        .selected-option {
            &:before {
                background-color: $color-critical-red;
            }
        }
    }
}
/* ... */

